updated playlist csv

--- a/robot.ipynb
+++ b/robot.ipynb
@@ -81,6 +81,96 @@
     "with open ('cities.txt','w') as f:\n",
     "    f.write('Dallas | Manchester | Copenhagen')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d4fbfe6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import csv\n",
+    "\n",
+    "#with open(\"apple_orchard.csv\") as f:\n",
+    "    #apple_orchard_data = list(csv.DictReader(f))\n",
+    "    #apple_tree_yields = [float(x[\"yield\"]) for x in apple_orchard_data]\n",
+    "    #print(\"Total apple tree yields:\", len(apple_tree_yields))\n",
+    "    #print(\"Average apple tree yield:\", sum(apple_tree_yields) / len(apple_tree_yields))\n",
+    "    #print(\"Maximum apple tree yield:\", max(apple_tree_yields))\n",
+    "    #print(\"Minimum apple tree yield:\", min(apple_tree_yields)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3418cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'playlist_name': 'My_Jams',\n",
+       " 'created_by': 'Chacha',\n",
+       " 'tracks': [{'title': 'Stan',\n",
+       "   'artist': 'Eminem',\n",
+       "   'album': 'The Marshall Mathers LP',\n",
+       "   'duration_sec': 405},\n",
+       "  {'title': 'In Da Club',\n",
+       "   'artist': '50 Cent',\n",
+       "   'album': 'Get Rich or Die Tryin',\n",
+       "   'duration_sec': 240},\n",
+       "  {'title': 'Suzanna',\n",
+       "   'artist': 'Sauti Sol',\n",
+       "   'album': 'Midnight Train',\n",
+       "   'duration_sec': 239},\n",
+       "  {'title': 'Many Men',\n",
+       "   'artist': '50 Cent',\n",
+       "   'album': 'Get Rich or Die Tryin',\n",
+       "   'duration_sec': 256},\n",
+       "  {'title': 'Bad Liar',\n",
+       "   'artist': 'Imagine Dragons',\n",
+       "   'album': 'Origins',\n",
+       "   'duration_sec': 243}]}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open ('playlist.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ebd162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\\n  \"playlist_name\": \"My_Jams\",\\n  \"created_by\": \"Chacha\",\\n  \"tracks\": [\\n    {\\n      \"title\": \"Stan\",\\n      \"artist\": \"Eminem\",\\n      \"album\": \"The Marshall Mathers LP\",\\n      \"duration_sec\": 405\\n    },\\n    {\\n      \"title\": \"In Da Club\",\\n      \"artist\": \"50 Cent\",\\n      \"album\": \"Get Rich or Die Tryin\",\\n      \"duration_sec\": 240\\n    },\\n    {\\n      \"title\": \"Suzanna\",\\n      \"artist\": \"Sauti Sol\",\\n      \"album\": \"Midnight Train\",\\n      \"duration_sec\": 239\\n    },\\n    {\\n      \"title\": \"Many Men\",\\n      \"artist\": \"50 Cent\",\\n      \"album\": \"Get Rich or Die Tryin\",\\n      \"duration_sec\": 256\\n    },\\n    {\\n      \"title\": \"Bad Liar\",\\n      \"artist\": \"Imagine Dragons\",\\n      \"album\": \"Origins\",\\n      \"duration_sec\": 243\\n    }\\n  ]\\n}\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#not recommended, everything becomes a string\n",
+    "with open('playlist.json', 'r') as f:\n",
+    "    dt = f.read()\n",
+    "\n",
+    "dt"
+   ]
   }
  ],
  "metadata": {
