added file opening code to robot.ipynb

--- a/robot.ipynb
+++ b/robot.ipynb
@@ -2,10 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9b6c3565",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Amsterdam</th>\n",
+       "      <th>Berlin</th>\n",
+       "      <th>Cairo</th>\n",
+       "      <th>Durban</th>\n",
+       "      <th>Eldoret</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>220</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>134</td>\n",
+       "      <td>256</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>143</td>\n",
+       "      <td>289</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>140</td>\n",
+       "      <td>245</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Amsterdam  Berlin  Cairo  Durban  Eldoret\n",
+       "0        100     220      3       4        5\n",
+       "1        134     256      3       4        5\n",
+       "2        143     289      3       4        5\n",
+       "3        140     245      3       4        5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "pd.read_csv('./sample.csv').head()"
@@ -13,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3ed1cd8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amsterdam,Berlin,Cairo,Durban,Eldoret\\n100,220,3,4,5\\n134,256,3,4,5\\n143,289,3,4,5\\n140,245,3,4,5'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = open('./sample.csv', 'r')\n",
     "x.read()"
@@ -24,10 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "132bbd69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_io.TextIOWrapper' object has no attribute 'code'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-1c2bb0667656>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: '_io.TextIOWrapper' object has no attribute 'code'"
+     ]
+    }
+   ],
    "source": [
     "x.code()"
    ]
@@ -47,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "71e6c91d",
    "metadata": {},
    "outputs": [
@@ -73,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "26f97cd1",
    "metadata": {},
    "outputs": [],
@@ -84,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d4fbfe6f",
    "metadata": {},
    "outputs": [],
@@ -165,11 +266,189 @@
     }
    ],
    "source": [
-    "#not recommended, everything becomes a string\n",
+    "# not recommended, everything becomes a string\n",
     "with open('playlist.json', 'r') as f:\n",
     "    dt = f.read()\n",
     "\n",
     "dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da07b387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Transforming JSON schemas\n",
+    "\n",
+    "#Here we want to transform JSON into a flatter structure, which we can use for analysis\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "load JSON File,\n",
+    "iterate over the tracks and create a new list from the data points\n",
+    "\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69121206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using pandas to make it to csv\n",
+    "import pandas as pd\n",
+    "with open('playlist.json', 'r') as f:\n",
+    "    playlist = json.load(f)\n",
+    "\n",
+    "df = pd.DataFrame(playlist['tracks'])\n",
+    "df.head()\n",
+    "df.to_csv('tracks.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47bcf0a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Stan',\n",
+       "  'artist': 'Eminem',\n",
+       "  'album': 'The Marshall Mathers LP',\n",
+       "  'duration_sec': 405},\n",
+       " {'title': 'In Da Club',\n",
+       "  'artist': '50 Cent',\n",
+       "  'album': 'Get Rich or Die Tryin',\n",
+       "  'duration_sec': 240},\n",
+       " {'title': 'Suzanna',\n",
+       "  'artist': 'Sauti Sol',\n",
+       "  'album': 'Midnight Train',\n",
+       "  'duration_sec': 239},\n",
+       " {'title': 'Many Men',\n",
+       "  'artist': '50 Cent',\n",
+       "  'album': 'Get Rich or Die Tryin',\n",
+       "  'duration_sec': 256},\n",
+       " {'title': 'Bad Liar',\n",
+       "  'artist': 'Imagine Dragons',\n",
+       "  'album': 'Origins',\n",
+       "  'duration_sec': 243}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracks = data['tracks']\n",
+    "tracks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78bf1f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Stan</td>\n",
+       "      <td>Eminem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In Da Club</td>\n",
+       "      <td>50 Cent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Suzanna</td>\n",
+       "      <td>Sauti Sol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Many Men</td>\n",
+       "      <td>50 Cent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bad Liar</td>\n",
+       "      <td>Imagine Dragons</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        title           artist\n",
+       "0        Stan           Eminem\n",
+       "1  In Da Club          50 Cent\n",
+       "2     Suzanna        Sauti Sol\n",
+       "3    Many Men          50 Cent\n",
+       "4    Bad Liar  Imagine Dragons"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flattened_tracks = []\n",
+    "\n",
+    "for track in tracks:\n",
+    "    dict_keys = list(track.keys())\n",
+    "    flattened_tracks.append({\n",
+    "        dict_keys[0]: track['title'],\n",
+    "        dict_keys[1]: track['artist'],\n",
+    "    })\n",
+    "df2 = pd.DataFrame(flattened_tracks)\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5bd87a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('playlist.csv', 'w', newline=\"\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames=['title', 'artist', 'album', 'duration_sec'])\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(data['tracks'])"
    ]
   }
  ],
